...
        style={s.list}
        data={data}
        keyExtractor={(item) => item.id}
        renderItem={({ item, index }) => (
          <WorkshopCard workshop={item} index={index} />
        )}
        testID="home.workshops.list"
        contentContainerStyle={{
          flexGrow: 1,
          paddingHorizontal: spacing.screenPadding,
          paddingTop: insets.top + spacing.sectionGap,
          paddingBottom: 140,
        }}
...
